added project 1 to showcase

--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
                 </tr>
             </thead>
             <tbody>
+
+                <!-- Project 1 => Expanding Cards STARTS -->
                 <tr>
                     <th scope="row">1</th>
                     <td>Expanding Cards</td>
-                    <td><a href="" class="badge badge-pill badge-success">Live Demo</a></td>
+                    <td><a href="https://mohand2.github.io/50DaysJsProjects/Expanding%20Cards"
+                            class="badge badge-pill badge-success">Live Demo</a></td>
                 </tr>
+                <!-- Project 1 => Expanding Cards ENDS -->
 
             </tbody>
         </table>
