--- a/Expanding Cards/index.html
+++ b/Expanding Cards/index.html
@@ -6,11 +6,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
-        <title>Project</title>
+        <title>Expanding Cards</title>
     </head>
 
     <body>
-        <h1>Project</h1>
+        <div class="panel" style="background-image: url('https://source.unsplash.com/1Z2niiBPg5A');"></div>
+        <div class="panel" style="background-image:url('https://source.unsplash.com/-G3rw6Y02D0') ;"></div>
+        <div class="panel" style="background-image:url('https://source.unsplash.com/y2azHvupCVo') ;"></div>
+        <div class="panel" style="background-image:url('https://source.unsplash.com/JoH60FhTp50') ;"></div>
+        <div class="panel" style="background-image:url('https://source.unsplash.com/TFyi0QOx08c') ;"></div>
+
+
 
         <script src="script.js"></script>
     </body>
