--- a/Expanding Cards/index.html
+++ b/Expanding Cards/index.html
@@ -10,11 +10,21 @@
     </head>
 
     <body>
-        <div class="panel" style="background-image: url('https://source.unsplash.com/1Z2niiBPg5A');"></div>
-        <div class="panel" style="background-image:url('https://source.unsplash.com/-G3rw6Y02D0') ;"></div>
-        <div class="panel" style="background-image:url('https://source.unsplash.com/y2azHvupCVo') ;"></div>
-        <div class="panel" style="background-image:url('https://source.unsplash.com/JoH60FhTp50') ;"></div>
-        <div class="panel" style="background-image:url('https://source.unsplash.com/TFyi0QOx08c') ;"></div>
+        <div class="panel" style="background-image: url('https://source.unsplash.com/1Z2niiBPg5A');">
+            <h3>Green landscape</h3>
+        </div>
+        <div class="panel" style="background-image:url('https://source.unsplash.com/-G3rw6Y02D0') ;">
+            <h3>Golden hour pic</h3>
+        </div>
+        <div class="panel" style="background-image:url('https://source.unsplash.com/y2azHvupCVo') ;">
+            <h3>Snow landscape</h3>
+        </div>
+        <div class="panel" style="background-image:url('https://source.unsplash.com/JoH60FhTp50') ;">
+            <h3>USA Forests</h3>
+        </div>
+        <div class="panel" style="background-image:url('https://source.unsplash.com/TFyi0QOx08c') ;">
+            <h3>Foggy Forest</h3>
+        </div>
 
 
 
