--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
 
-        <table class="table">
+        <table class="table table-dark">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">Day</th>
