--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
                 </tr>
                 <!-- Project 1 => Expanding Cards ENDS -->
 
+                <!-- Project 2 => Progress Steps STARTS -->
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Progress Steps</td>
+                    <td><a href="https://mohand2.github.io/50DaysJsProjects/progress_steps"
+                            class="badge badge-pill badge-success">Live Demo</a></td>
+                </tr>
+                <!-- Project 2 => Progress Steps ENDS -->
+
+
+
             </tbody>
         </table>
 
