--- a/progress_steps/index.html
+++ b/progress_steps/index.html
@@ -5,11 +5,37 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
         <title>Progress steps</title>
     </head>
 
-    <body>
 
+    <body>
+        <div class="progress">
+            <div class="item active">
+                <p class="round ">1</p>
+            </div>
+            <div class="item">
+                <div class="line"></div>
+                <p class="round ">2</p>
+            </div>
+            <div class="item ">
+                <div class="line"></div>
+                <p class="round ">3</p>
+            </div>
+            <div class="item">
+                <div class="line "></div>
+                <p class="round ">4</p>
+            </div>
+        </div>
+        <div class="main-btn">
+            <div class="btn">
+                <p>Back</p>
+            </div>
+            <div class="btn btn-active">
+                <p>Next</p>
+            </div>
+        </div>
     </body>
 
 </html>
