--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>50 Days of Javascript Projects</title>
     </head>
 
-    <body>
+    <body style="background-color: #222;">
 
         <table class="table table-dark">
             <thead class="thead-dark">
