--- a/progress_steps/index.html
+++ b/progress_steps/index.html
@@ -15,7 +15,7 @@
             <div class="item active">
                 <p class="round ">1</p>
             </div>
-            <div class="item">
+            <div class="item ">
                 <div class="line"></div>
                 <p class="round ">2</p>
             </div>
@@ -29,13 +29,14 @@
             </div>
         </div>
         <div class="main-btn">
-            <div class="btn">
+            <div class="btn btn-back btn-disabled">
                 <p>Back</p>
             </div>
-            <div class="btn btn-active">
+            <div class="btn btn-next">
                 <p>Next</p>
             </div>
         </div>
+        <script src="scripts.js"></script>
     </body>
 
 </html>
