--- a/progress_steps/index.html
+++ b/progress_steps/index.html
@@ -27,6 +27,14 @@
                 <div class="line "></div>
                 <p class="round ">4</p>
             </div>
+            <div class="item">
+                <div class="line "></div>
+                <p class="round ">4</p>
+            </div>
+            <div class="item">
+                <div class="line "></div>
+                <p class="round ">4</p>
+            </div>
         </div>
         <div class="main-btn">
             <div class="btn btn-back btn-disabled">
