--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
                 </tr>
                 <!-- Project 2 => Progress Steps ENDS -->
 
+                <!-- Project 3 Rotating navigation  STARTS -->
+                <tr>
+                    <th scope="row">3</th>
+                    <td> Rotating Navigation </td>
+                    <td><a href="https://mohand2.github.io/50DaysJsProjects/progress_steps"
+                            class="badge badge-pill badge-success">Live Demo</a></td>
+                </tr>
+                <!-- Project 3 Rotating navigation  ENDS -->
+
 
 
             </tbody>
