--- a/Rotating_navigation/index.html
+++ b/Rotating_navigation/index.html
@@ -4,14 +4,66 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+            integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="styles.css">
+
         <title>Rotating navigation</title>
     </head>
 
 
     <body>
-        <h1>Rotating navigation</h1>
+        <div class="btn">
+            <i class="fa-solid fa-bars fa-2x"></i>
+        </div>
+
+        <div class="nav">
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </div>
+
+        <main class="container ">
+            <section class="article">
+                <header>
+                    <h1>Amazing Articls</h1>
+                    <p>Florin Pop</p>
+                </header>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia in ratione dolores
+                    cupiditate, maxime aliquid
+                    impedit dolorem nam dolor omnis atque fuga labore modi veritatis porro laborum minus, illo, maiores
+                    recusandae cumque
+                    ipsa quos. Tenetur, consequuntur mollitia labore pariatur sunt quia harum aut. Eum maxime dolorem
+                    provident natus
+                    veritatis molestiae cumque quod voluptates ab non, tempore cupiditate? Voluptatem, molestias culpa.
+                    Corrupti, laudantium
+                    iure aliquam rerum sint nam quas dolor dignissimos in error placeat quae temporibus minus optio eum
+                    soluta cupiditate!
+                    Cupiditate saepe voluptates laudantium. Ducimus consequuntur perferendis consequatur nobis
+                    exercitationem molestias
+                    fugiat commodi omnis. Asperiores quia tenetur nemo ipsa.</p>
+
+                <h3>My dog</h3>
+                <img src="https://source.unsplash.com/wFbkj9ilGnQ" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nisi hic voluptatum corrupti velit
+                    aliquid laboriosam, dolore cupiditate inventore dolorem magnam aliquam recusandae? Nostrum id esse,
+                    debitis laborum aliquam ipsa? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa dolorum
+                    voluptatum nam officiis quod ex, quae consequatur, quis ea ducimus repudiandae aperiam et molestiae
+                    harum sed ratione, repellat odio possim Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Voluptatibus mollitia nihil repellat ipsum optio. Quo odio cumque temporibus ea dolorem cupiditate
+                    quia repellendus nisi repudiandae iusto modi, enim magni voluptatum.</p>
+            </section>
+
+
+        </main>
+
         <script src="script.js"></script>
     </body>
 
