--- a/Rotating_navigation/index.html
+++ b/Rotating_navigation/index.html
@@ -20,17 +20,7 @@
             <i class="fa-solid fa-bars fa-2x"></i>
         </div>
 
-        <div class="nav">
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Contact</li>
-                </ul>
-            </nav>
-        </div>
-
-        <main class="container ">
+        <main class="container rotate-container">
             <section class="article">
                 <header>
                     <h1>Amazing Articls</h1>
@@ -63,6 +53,16 @@
 
 
         </main>
+
+        <div class="nav">
+
+            <ul class="list">
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
+
+        </div>
 
         <script src="script.js"></script>
     </body>
