--- a/Rotating_navigation/index.html
+++ b/Rotating_navigation/index.html
@@ -17,10 +17,13 @@
 
     <body>
         <div class="btn">
-            <i class="fa-solid fa-bars fa-2x"></i>
+
+            <i class="fa-solid fa-times fa-2x "></i>
+            <i class="fa-solid fa-bars fa-2x "></i>
+
         </div>
 
-        <main class="container rotate-container">
+        <main class="container">
             <section class="article">
                 <header>
                     <h1>Amazing Articls</h1>
@@ -28,13 +31,17 @@
                 </header>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia in ratione dolores
                     cupiditate, maxime aliquid
-                    impedit dolorem nam dolor omnis atque fuga labore modi veritatis porro laborum minus, illo, maiores
+                    impedit dolorem nam dolor omnis atque fuga labore modi veritatis porro laborum minus, illo,
+                    maiores
                     recusandae cumque
-                    ipsa quos. Tenetur, consequuntur mollitia labore pariatur sunt quia harum aut. Eum maxime dolorem
+                    ipsa quos. Tenetur, consequuntur mollitia labore pariatur sunt quia harum aut. Eum maxime
+                    dolorem
                     provident natus
-                    veritatis molestiae cumque quod voluptates ab non, tempore cupiditate? Voluptatem, molestias culpa.
+                    veritatis molestiae cumque quod voluptates ab non, tempore cupiditate? Voluptatem, molestias
+                    culpa.
                     Corrupti, laudantium
-                    iure aliquam rerum sint nam quas dolor dignissimos in error placeat quae temporibus minus optio eum
+                    iure aliquam rerum sint nam quas dolor dignissimos in error placeat quae temporibus minus optio
+                    eum
                     soluta cupiditate!
                     Cupiditate saepe voluptates laudantium. Ducimus consequuntur perferendis consequatur nobis
                     exercitationem molestias
@@ -43,11 +50,15 @@
                 <h3>My dog</h3>
                 <img src="https://source.unsplash.com/wFbkj9ilGnQ" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nisi hic voluptatum corrupti velit
-                    aliquid laboriosam, dolore cupiditate inventore dolorem magnam aliquam recusandae? Nostrum id esse,
-                    debitis laborum aliquam ipsa? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa dolorum
-                    voluptatum nam officiis quod ex, quae consequatur, quis ea ducimus repudiandae aperiam et molestiae
+                    aliquid laboriosam, dolore cupiditate inventore dolorem magnam aliquam recusandae? Nostrum id
+                    esse,
+                    debitis laborum aliquam ipsa? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa
+                    dolorum
+                    voluptatum nam officiis quod ex, quae consequatur, quis ea ducimus repudiandae aperiam et
+                    molestiae
                     harum sed ratione, repellat odio possim Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Voluptatibus mollitia nihil repellat ipsum optio. Quo odio cumque temporibus ea dolorem cupiditate
+                    Voluptatibus mollitia nihil repellat ipsum optio. Quo odio cumque temporibus ea dolorem
+                    cupiditate
                     quia repellendus nisi repudiandae iusto modi, enim magni voluptatum.</p>
             </section>
 
