--- a/Rotating_navigation/index.html
+++ b/Rotating_navigation/index.html
@@ -29,7 +29,7 @@
                     <h1>Amazing Articls</h1>
                     <p>Florin Pop</p>
                 </header>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia in ratione dolores
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia in ratione dolores
                     cupiditate, maxime aliquid
                     impedit dolorem nam dolor omnis atque fuga labore modi veritatis porro laborum minus, illo,
                     maiores
@@ -49,7 +49,7 @@
 
                 <h3>My dog</h3>
                 <img src="https://source.unsplash.com/wFbkj9ilGnQ" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nisi hic voluptatum corrupti velit
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nisi hic voluptatum corrupti velit
                     aliquid laboriosam, dolore cupiditate inventore dolorem magnam aliquam recusandae? Nostrum id
                     esse,
                     debitis laborum aliquam ipsa? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa
@@ -65,12 +65,20 @@
 
         </main>
 
-        <div class="nav">
+        <div class="nav ">
 
             <ul class="list">
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li><i class="fa fa-home fa-2x" aria-hidden="true"></i>
+                    <p>Home</p>
+                </li>
+                <li>
+                <li><i class="fa fa-circle-info fa-2x" aria-hidden="true"></i>
+                    <p>About</p>
+                </li>
+                <li>
+                <li><i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+                    <p>Contact</p>
+                </li>
             </ul>
 
         </div>
