--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
                 </tr>
                 <!-- Project 3 Rotating navigation  ENDS -->
 
+                <!-- Project 4 Timeline  STARTS -->
+                <tr>
+                    <th scope="row">4</th>
+                    <td> Timeline </td>
+                    <td><a href="https://mohand2.github.io/50DaysJsProjects/timeline"
+                            class="badge badge-pill badge-success">Live Demo</a></td>
+                </tr>
+                <!-- Project 4 Timeline  ENDS -->
+
 
 
             </tbody>
