--- a/timeline/index.html
+++ b/timeline/index.html
@@ -10,7 +10,33 @@
     </head>
 
     <body>
-
+        <!-- project 1 -->
+        <div class="project">
+            <div class="circle"></div>
+            <div class="project-info">test</div>
+        </div>
+        <!-- project 2 -->
+        <div class="project">
+            <div class="circle"></div>
+            <div class="project-info">test</div>
+        </div>
+        <!-- project 3 -->
+        <div class="project">
+            <div class="circle"></div>
+            <div class="project-info">test</div>
+        </div>
+        <!-- project 3 -->
+        <div class="project">
+            <div class="circle"></div>
+            <div class="project-info">test</div>
+        </div>
+        <!-- project 3 -->
+        <div class="project">
+            <div class="circle"></div>
+            <div class="project-info">test</div>
+        </div>
+      
+        <script src="script.js"></script>
     </body>
 
 </html>
