--- a/timeline/index.html
+++ b/timeline/index.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <main>
         <!-- project 1 -->
         <div class="project">
             <div class="circle"></div>
@@ -30,11 +31,7 @@
             <div class="circle"></div>
             <div class="project-info">test</div>
         </div>
-        <!-- project 3 -->
-        <div class="project">
-            <div class="circle"></div>
-            <div class="project-info">test</div>
-        </div>
+    </main>
       
         <script src="script.js"></script>
     </body>
